--- a/src/app/countdown/countdown.component.html
+++ b/src/app/countdown/countdown.component.html
@@ -1,6 +1,6 @@
 
 <div class="timer">
-    <h4>The big day is coming!!!</h4>
+    <h4>{{I18n.get('The big day is coming!!!')}}</h4>
     <span id="days"> {{daysToDday}} </span>Days
     <span id="hours"> {{hoursToDday}} </span>Hrs
     <span id="minutes"> {{minutesToDday}} </span>Min
