--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -6,16 +6,16 @@
         <mat-card-header>
         <mat-card-title-group>
             <img mat-card-md-image src="{{event.image}}" >
-            <mat-card-title>{{event.name}}</mat-card-title>
+            <mat-card-title>{{I18n.get(event.name)}}</mat-card-title>
             <mat-card-subtitle>{{event?.date}}</mat-card-subtitle>
             <mat-card-subtitle>{{event?.start}} - {{event?.stop}}</mat-card-subtitle>
-            <mat-card-subtitle>{{event.address_name}} </mat-card-subtitle>
+            <mat-card-subtitle>{{I18n.get(event.address_name)}} </mat-card-subtitle>
             <mat-card-subtitle> <a href="http://maps.google.com/?q={{event.address}}">{{event.address}} </a></mat-card-subtitle>
             
         </mat-card-title-group>
         </mat-card-header>
         <mat-card-content>
-        {{event.description}}
+        {{I18n.get(event.description)}}
 
         </mat-card-content>
         <!--
