--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -11,7 +11,7 @@
         class="tile">
       <img src="{{tile.itemImageSrc}}" class="img"  [style.color]="'red'" [style.border-image-slice]="tile.frameCut" [style.border-image-repeat]="tile.frameRepeat" [style.border-image-source]="'url(' + tile.frameSrc + ')'"  >
 
-      <div class="hover" *ngIf="tile.hover">{{tile.alt}}</div>
+      <div class="hover" *ngIf="tile.hover">{{I18n.get(tile.alt)}}</div>
     </mat-grid-tile>
   </mat-grid-list>
 
