--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,21 +6,21 @@
 
     <div class="info_l" fxLayout="column" >
         <div fxFlex class="title_l">
-            We've waited 4,063 days for this.
+            {{I18n.get('We\'ve waited 4,063 days for this.')}}
         <br/>
-            Party accordingly.
+            {{I18n.get('Party accordingly.')}}
         </div>
         <br/><br/>
 
         <div fxFlex class="where_l">
-               <b>When:</b>
+               <b>{{I18n.get('When:')}}</b>
                 <br/>
             Sunday April 14, 2024
         </div>
 
         <div fxFlex class="where_l">
-            <b>Where:</b> <br/>
-            Fox Meadow Barn<br/>
+            <b>{{I18n.get('Where:')}}</b> <br/>
+            {{I18n.get('Fox Meadow Barn')}}<br/>
             350 Old Firehouse Ln<br/>
             Winchester, VA 22602
         </div>
@@ -36,20 +36,20 @@
 
     <div class="info" fxLayout="column" >
         <div fxFlex class="title">
-            We've waited 4,063 days for this.
+            {{I18n.get('We\'ve waited 4,063 days for this.')}}
         <br/>
-            Party accordingly.
+            {{I18n.get('Party accordingly.')}}
         </div>
 
         <div fxFlex class="where">
-               <b>When:</b>
+               <b>{{I18n.get('When:')}}</b>
                 <br/>
             Sunday April 14, 2024
         </div>
 
         <div fxFlex class="where">
-            <b>Where:</b> <br/>
-            Fox Meadow Barn<br/>
+            <b>{{I18n.get('Where:')}}</b> <br/>
+            {{I18n.get('Fox Meadow Barn')}}<br/>
             350 Old Firehouse Ln<br/>
             Winchester, VA 22602
         </div>
@@ -62,7 +62,7 @@
 
 
     <button mat-raised-button class="rsvp" color="transparent" routerLink="/rsvp">
-        RSVP
+        {{I18n.get('RSVP')}}
       </button>
 
 </div>
