--- a/src/app/comming-soon/comming-soon.component.scss
+++ b/src/app/comming-soon/comming-soon.component.scss
@@ -14,7 +14,7 @@ div {
       left: 0px;
   
       width: 100%;
-      overflow: scroll;
+      overflow: auto;
 
       background-image: url("../../assets/paper_o.png");
       background-position: center; 
