--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,7 +23,7 @@
     background-position: center; 
   background-repeat: no-repeat; 
   background-size: cover; 
-  overflow: scroll;
+  overflow: auto;
 }
 
 .info_l {
