--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -12,7 +12,7 @@
       left: 0px;
   
       width: 100%;
-      overflow: scroll;
+      overflow: auto;
 
       background-image: url("../../assets/paper_o.png");
       background-position: center; 
