--- a/src/app/faq/faq.component.scss
+++ b/src/app/faq/faq.component.scss
@@ -7,7 +7,7 @@
       padding: 30px;
   
       width: 100%;
-      overflow: scroll;
+      overflow: auto;
 
       background-image: url("../../assets/paper_o.png");
       background-position: center; 
