--- a/src/app/invite/invite.component.scss
+++ b/src/app/invite/invite.component.scss
@@ -5,7 +5,7 @@
       left: 0px;
   
       width: 100%;
-      overflow: scroll;
+      overflow: auto;
 
       background-image: url("../../assets/paper_o.png");
       background-position: center; 
@@ -16,7 +16,7 @@
 .message {
   height: 50%;
   width: 100%;
-  overflow: scroll;
+  overflow: auto;
   padding-left: 10%;
   padding-right: 10%;
   padding-bottom: 10px;
