--- a/src/app/lodging/lodging.component.css
+++ b/src/app/lodging/lodging.component.css
@@ -17,7 +17,7 @@
       left: 0px;
   
       width: 100%;
-      overflow: scroll;
+      overflow: auto;
 
       background-image: url("../../assets/paper_o.png");
       background-position: center; 
