--- a/src/app/rsvp-yes/rsvp-yes.component.scss
+++ b/src/app/rsvp-yes/rsvp-yes.component.scss
@@ -5,7 +5,7 @@
       left: 0px;
   
       width: 100%;
-      overflow: scroll;
+      overflow: auto;
       padding: 20px;
       padding-bottom: 40px;
 
