--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -26,7 +26,7 @@
       left: 0px;
   
       width: 100%;
-      overflow: scroll;
+      overflow: auto;
 
       background-image: url("../../assets/paper_o.png");
       background-position: center; 
