--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -20,7 +20,7 @@ width: 100%;
 //padding: 5%;
 //margin: 5%;
 
-overflow: scroll;
+overflow: auto;
 }  
 
 .containerx{
@@ -29,7 +29,7 @@ overflow: scroll;
 height: 100%;
 width: 100%;
 //margin: 5%;
-overflow: scroll;
+overflow: auto;
 }
 
 .flip-book {
@@ -49,7 +49,7 @@ overflow: scroll;
   background-color: hsl(35, 55, 98);
   color: hsl(239, 82%, 47%);
 
-  overflow: scroll;
+  overflow: auto;
 
   .page-content {
     width: 90%;
