--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -29,7 +29,7 @@
 <br/>
 <br/>
 
-<mat-slide-toggle>{{I18n.get('Recieve Email Notifications of website updates:')}}</mat-slide-toggle>
+<mat-slide-toggle>{{I18n.get('Receive Email Notifications of website updates:')}}</mat-slide-toggle>
 <br/>
 
 <form class="example-form">
