--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,8 +7,8 @@
 <h1>{{I18n.get('Welcome')}} {{userService.userInfo.display_name}}</h1>
 
 
-<!--
-<label id="example-radio-group-label">{{I18n.get('Language Preferance:')}}</label>
+
+<label id="example-radio-group-label">{{I18n.get('Language Preference:')}}</label>
 <br/>
 
 <mat-radio-group
@@ -24,7 +24,7 @@
     English
   </mat-radio-button>
 </mat-radio-group>
--->
+
 <br/>
 <br/>
 <br/>
