--- a/src/app/rsvp/rsvp.component.scss
+++ b/src/app/rsvp/rsvp.component.scss
@@ -13,6 +13,12 @@
     background-size: cover; 
   }
 
+  .dialog-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
 .buttons {
   margin:auto;
   text-align: center;
