--- a/src/app/ourstory/ourstory.component.scss
+++ b/src/app/ourstory/ourstory.component.scss
@@ -129,7 +129,7 @@ overflow: auto;
       //background-color: hsl(35, 77%, 67%);
       //color:  hsl(35, 35, 35);
       
-      
+      z-index: 50;
     
   
   
