--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,6 +14,27 @@
   bottom: 0px;
 }
 
+
+
+.container {
+  height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr; 
+}
+
+/* Grid row 1 */
+mat-toolbar {
+
+}
+
+/* Grid row 2 */
+mat-drawer-container  {
+  overflow-y: auto;
+
+}
+
+
+
 span {
   padding-left: 5px;
 }
