--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,7 +21,7 @@
   width:100%;
   margin: 0px;
   display: grid;
-  grid-template-rows: auto 1fr; 
+  grid-template-rows: ; 
 }
 
 /* Grid row 1 */
