make gallery smaller

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,7 +1,7 @@
  <div class="all">
     
-    
-<mat-grid-list cols="4" rowHeight="100px">
+
+<mat-grid-list [cols]="columnNum" [rowHeight]="rowHeight">
     <mat-grid-tile
         *ngFor="let tile of images"
         [colspan]="tile.cols"
