--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,6 +74,9 @@
               <mat-list-item routerLink="/rsvp">
                 <mat-icon>mark_email_read</mat-icon><span>{{I18n.get('RSVP')}} </span>
                 </mat-list-item>
+                <mat-list-item routerLink="/charity">
+                  <mat-icon>redeem</mat-icon><span>{{I18n.get('Registry')}} </span>
+                  </mat-list-item>
           <mat-expansion-panel [class.mat-elevation-z0]="true">
               <mat-expansion-panel-header>
                 {{I18n.get('Travel')}} 
