--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,29 @@
           <mat-list-item routerLink="/events">
             <mat-icon>event</mat-icon><span>{{I18n.get('Events')}} </span>
           </mat-list-item>
+          <mat-expansion-panel [class.mat-elevation-z0]="true">
+            <mat-expansion-panel-header>
+              <mat-icon>luggage</mat-icon><span>{{I18n.get('Travel')}} </span>
+            </mat-expansion-panel-header>
+            <mat-nav-list>
+              <mat-list-item routerLink="/lodging">
+                <mat-icon>hotel</mat-icon><span>{{I18n.get('Lodging')}} </span>
+              </mat-list-item>
+              <mat-list-item routerLink="/restaurants">
+                <mat-icon>restaurant_menu</mat-icon><span>{{I18n.get('Food')}} </span>
+              </mat-list-item>
+              <mat-list-item routerLink="/activities">
+                <mat-icon>local_activity</mat-icon><span>{{I18n.get('Activities')}} </span>
+              </mat-list-item>
+              <mat-list-item routerLink="/areas">
+                <mat-icon>map</mat-icon><span>{{I18n.get('Areas')}} </span>
+              </mat-list-item>
+              <mat-list-item routerLink="/airports">
+                <mat-icon>flight</mat-icon><span>{{I18n.get('Airports')}} </span>
+              </mat-list-item>
+
+            </mat-nav-list>
+        </mat-expansion-panel>
           <mat-list-item routerLink="/ourstory">
             <mat-icon>menu_book</mat-icon><span>{{I18n.get('Our Story')}} </span>
           </mat-list-item>
@@ -77,29 +100,7 @@
                 <mat-list-item routerLink="/charity">
                   <mat-icon>redeem</mat-icon><span>{{I18n.get('Registry')}} </span>
                   </mat-list-item>
-          <mat-expansion-panel [class.mat-elevation-z0]="true">
-              <mat-expansion-panel-header>
-                {{I18n.get('Travel')}} 
-              </mat-expansion-panel-header>
-              <mat-nav-list>
-                <mat-list-item routerLink="/lodging">
-                  <mat-icon>hotel</mat-icon><span>{{I18n.get('Lodging')}} </span>
-                </mat-list-item>
-                <mat-list-item routerLink="/restaurants">
-                  <mat-icon>restaurant_menu</mat-icon><span>{{I18n.get('Food')}} </span>
-                </mat-list-item>
-                <mat-list-item routerLink="/activities">
-                  <mat-icon>local_activity</mat-icon><span>{{I18n.get('Activities')}} </span>
-                </mat-list-item>
-                <mat-list-item routerLink="/areas">
-                  <mat-icon>map</mat-icon><span>{{I18n.get('Areas')}} </span>
-                </mat-list-item>
-                <mat-list-item routerLink="/airports">
-                  <mat-icon>flight</mat-icon><span>{{I18n.get('Airports')}} </span>
-                </mat-list-item>
-
-              </mat-nav-list>
-          </mat-expansion-panel>
+          
       </mat-nav-list>
     </mat-drawer>
 
