--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -1,1 +1,26 @@
-<p>activities works!</p>
+
+<div class="all">
+
+    <div *ngFor="let activity of activities">
+        <mat-card class="example-card">
+            <mat-card-header>
+            <mat-card-title-group>
+                <img mat-card-md-image src="{{activity.image}}" >
+                <mat-card-title>{{I18n.get(activity.name)}}</mat-card-title>
+                <mat-card-subtitle> <a href="http://maps.google.com/?q={{activity.address}}">{{activity.location}} </a></mat-card-subtitle>
+                <mat-card-subtitle> <a href="{{activity.url}}">Webpage </a></mat-card-subtitle>
+                
+            </mat-card-title-group>
+            </mat-card-header>
+            <mat-card-content>
+            {{I18n.get(activity.description)}}
+    
+            </mat-card-content>
+
+    
+        </mat-card>
+    </div>
+    
+
+    
+    </div>
